# MgxParser

./: .gitignore  Analyzer.cpp  Analyzer.h  CMakeLists.txt  CompileConfig.h.in  Constants.h  DataStructures.h  Dockerfile  Dockerfile.alpine  Iconvpp.h  Pattern.h  Player.h  README.md  Record.cpp  Record.h  compile_config.h.in  demo.cc  demo.cpp  json.txt  main.cpp  mgxnode.cc  package-lock.json  package.json
.github/: docker-publish.yml
.github/workflows/: docker-publish.yml
docker_exe/: app.js  package.json  test.js
docs/html/: AnalyzerException_8h.html  AnalyzerException_8h__dep__incl.md5  AnalyzerException_8h__incl.md5  AnalyzerException_8h_source.html  Analyzer_8cpp.html  Analyzer_8cpp_8o_8d_source.html  Analyzer_8cpp__incl.md5  Analyzer_8cpp_source.html  Analyzer_8h.html  Analyzer_8h__dep__incl.md5  Analyzer_8h__incl.md5  Analyzer_8h_source.html  Analyzers_2basic_2Analyzer_8h.html  Analyzers_2basic_2Analyzer_8h__incl.md5  Analyzers_2basic_2Analyzer_8h_source.html  Analyzers_2default_2Analyzer_8cpp.html  Analyzers_2default_2Analyzer_8cpp_8o_8d_source.html  Analyzers_2default_2Analyzer_8cpp__incl.md5  Analyzers_2default_2Analyzer_8cpp_source.html  Analyzers_2default_2Analyzer_8h-example.html  Analyzers_2default_2Analyzer_8h.html  Analyzers_2default_2Analyzer_8h__dep__incl.md5  Analyzers_2default_2Analyzer_8h__incl.md5  Analyzers_2default_2Analyzer_8h_source.html  Analyzers_2default_2Player_8h.html  Analyzers_2default_2Player_8h__dep__incl.md5  Analyzers_2default_2Player_8h_source.html  BaseAnalyzer_8h.html  BaseAnalyzer_8h__dep__incl.md5  BaseAnalyzer_8h__incl.md5  BaseAnalyzer_8h_source.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp_source.html  Chat_8h.html  Chat_8h__dep__incl.md5  Chat_8h__incl.md5  Chat_8h_source.html  CompileConfig_8h_source.html  Constants_8h_source.html  DartConfiguration_8tcl_source.html  (+1674 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.html  classes_14.js  classes_15.html  classes_15.js  classes_16.html  classes_16.js  classes_17.html  classes_17.js  (+107 more)
docs/template/: Doxyfile.in  mainpage.h
legacy/: Analyzer.cpp  Analyzer.h  Constants.h  DataStructures.h  MapColors.h  MgxParser.h  Pattern.h  Player.h  Realm.h  Record.h  Team.h
legacy/docs/html/: Analyzer_8h_source.html  BaseAnalyzer_8h.html  BaseAnalyzer_8h__incl.md5  BaseAnalyzer_8h_source.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp_source.html  DataStructures_8h.html  DataStructures_8h__dep__incl.md5  DataStructures_8h__incl.md5  DataStructures_8h_source.html  EncodingConverter_8h.html  EncodingConverter_8h__dep__incl.md5  EncodingConverter_8h__incl.md5  MapColors_8h_source.html  Pattern_8h_source.html  PlayerData_8h_source.html  Player_8h_source.html  Realm_8h_source.html  Record_8cpp_source.html  Record_8h_source.html  annotated.html  classAnalyzer.html  classBaseAnalyzer-members.html  classBaseAnalyzer.html  classEncodingConverter-members.html  classEncodingConverter.html  classPlayer.html  classPlayerData-members.html  classPlayerData__coll__graph.md5  classPlayer__coll__graph.md5  classRealm-members.html  classRealm.html  classRealm__coll__graph.md5  classRecord-members.html  classRecord.html  classRecord__coll__graph.md5  classTeam-members.html  classTeam.html  dir_01239cd6b1fde8ac01c83cbbfab763f6.html  dir_0c7ecd3a715dc76e105746278d936a48.html  (+35 more)
libs/md5/: md5.cpp  md5.h
libs/spdlog/: tweakme.h
references/: detailed_mgx_english_0.7.xls
src/: Analyzer.cpp  EncodingConverter.h  Helper.h  Logger.h  MgxParser.cc  MgxParser.cpp  ParserException.h  Pattern.h  PlayerData.h  README.md  Realm.h  Team.h  Zipdecompress.cpp  Zipdecompress.h  auxiliary.h  cursor.cc  cursor.h  encoding_converter.h  main.cpp  status.h
src/Analyzers/: AnalyzerException.h  BaseAnalyzer.h
src/Analyzers/default/: Analyzer.cpp  Analyzer.h  Chat.h  Player.h  TileStructures.h  addonGuessWinner.cpp  addonGuid.cpp  analyzer.cc  mainproc_jsondump.cc  mainproc_loadfile.cc  subProcAI.cpp  subProcBody.cpp  subProcHeaderDE.cpp  (+32 more)
src/DataModels/: DataModel.cpp  DataModel.h  Player.h
src/Lang/: zh.h
src/MapTools/: MapColors.h  MapTools.cpp.old  MapTools.h  TileStructures.h
src/datamodels/: chat.h  player.h  record.h
src/include/: MgxParser.h
src/lang/: en.h  zh.h
src/testRecords/: AOC10_4v4_5_5e3b2a7e.mgx  SP Replay v5.8 @2020.03.08 132251.aoe2record  SP Replay v5.8 @2020.03.08 132251.body  SP Replay v5.8 @2020.03.08 132251.header  coop_AOC10c_1v1_1_3b2bc548.header
src/tools/: bytestohex.cc  bytestohex.h  cursor.cc  cursor.h  encoding_converter.h  logger.h  searcher.h  zipdecompress.cc  zipdecompress.h
src/ziptool/: zipdecompress.cc
test/: cursor_test.cc  maindemo.cpp  node_addon_test.js  php_call_test.php  test.cc  test.cpp
test/sampleRecords/: AOK_2v2_4_5363decb.mgl  HDEdition_4v4_1_4fbd2376.mgx2  SP Replay v101.102.1156.0 #(66692) @2022.09.26 074858.aoe2record  SP Replay v101.102.1156.0 #(66692) @2022.09.29 213903.aoe2record  SP Replay v101.102.1156.0 #(66692) @2022.09.29 221231.aoe2record  SP Replay v101.102.1156.0 #(66692) @2022.10.05 191710.aoe2record  coop3_AOC10_1v1_1_af6bd649.mgx  map_with_wall.mgx  smallrec_AOC10_1v1_1_b9ff0ef2.mgx  taiwan1.mgx
test/testRecords/: (2-red)游戏录象 -  22-十月-2022 19`42`18.mgx  (HD with AI)SP Replay v5.8 @2022.09.26 220819.aoe2record  SP Replay v101.102.1156.0 #(66692) @2022.10.07 214434.aoe2record  coop2_AOC10_1v1_2_8559bdeb.mgx
test/test_records/: (1-blue).mgx  (ENCODINGERROR)coop_AOC10c_1v1_1_3b2bc548.mgx  SP Replay v5.8 @2022.09.29 222349.aoe2record
testRecords/: AOCUP15_4v4_1_8478023f.header  AOCUP15_4v4_1_8478023f.mgz  HDEdition_4v4_1_6910e796.mgx2  coop2_AOC10_1v1_2_8559bdeb.body  coop2_AOC10_1v1_2_8559bdeb.header  scenario_AOCUP15_1v1_1_1cc6e262.header  scenario_AOCUP15_1v1_1_1cc6e262.mgz
(+136 files in other folders)
